--- a/public/css/search.css
+++ b/public/css/search.css
@@ -111,12 +111,9 @@ body {
 }
 
 #bottomBar {
-  /* background-color: orange; */
   width: 100%;
-  height: 100%;
   border-top: 1px solid #A0A0A0;
-  /* position: absolute;
-  bottom: 0; */
+  height: 3em;
 }
 
 #bottomBarGrid {
@@ -154,8 +151,6 @@ body {
 }
 
 #mainContent {
-  height: 100%;
-  max-height: 100%;
   overflow-y: scroll;
   background-color: #D0D0D0;
 }
@@ -172,11 +167,19 @@ body {
   font-family: 'Lato';
 }
 
-#similarUsersContainer {
+.userItem:last-child {
+  border-bottom: none;
+}
+
+#similarUsersContainer, #allUsersContainer {
+  overflow-y: scroll;
+  
   width: 100%;
   height: 100%;
+}
+
+#similarUsersContainer {
   background-color: white;
-  overflow-y: scroll;
 }
 
 #searchGreeting {
