--- a/public/css/login.css
+++ b/public/css/login.css
@@ -2,7 +2,7 @@ html, body {
   padding: 0;
   margin: 0;
   height: 100%;
-  background: linear-gradient(#8c14fc, white);
+  /* background: linear-gradient(#8c14fc, white); */
   font-family: 'Roboto', sans-serif;
 }
 
