--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,20 +9,24 @@ body {
 #appContainer {
   width: 100%;
   height: 100vh;
+  display: -ms-grid;
   display: grid;
-  grid-template-rows: 0.5fr 5fr 0.5fr;
+  -ms-grid-rows: 0.5fr 5fr 0.5fr;
+  grid-template-rows: 0.5fr 6fr 0.6fr;
   /* background-color: purple; */
   margin: 0;
   padding: 0;
   overflow-y: hidden;
 }
 :root {
-  --main-purple: #B885FE;
+  --main-dark-purple: #8c14fc;
+  --main-purple: #ac7bf1;
   --math-red: #ec644b;
   --science-green: #23cba7;
   --english-blue: #6bb9f0;
   --history-yellow: #f7ca18;
-  --foreign-orange: #e67e22
+  --foreign-orange: #e67e22;
+  color: #464646;
 }
 
 #topBar {
@@ -32,13 +36,16 @@ body {
 }
 
 #topBarGrid {
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: 15% 40% 27% 9% 9%;
-  border-bottom: 1px solid #D0D0D0;
+  width: 93%;
+  margin: auto;
+  /* -ms-grid-columns: 15% 40% 27% 9% 9%; */
+  -ms-grid-template-columns: 15% 1fr 18%;
+  grid-template-columns: 15% 1fr 18%;
 }
 
 #userIcon,
-#appName,
 #filterButton,
 #postButton,
 #homeButton,
@@ -46,23 +53,44 @@ body {
 #alertsButton,
 .subForumIcon,
 .formItemImageContainer,
-.itemMessage {
+.itemMessage,
+.postContainer,
+#userIconCircle,
+.userIconCircle {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
   /* vertically centering elements */
 }
 
-#userIcon {
-  /* background-color: red; */
+#postButton {
+  padding-right: 15px;
 }
 
-#userIconCircle {
+#userIcon {
+  /* background-color: red; */
+  padding-left: 5px;
+}
+
+#userIconCircle,
+.userIconCircle {
   width: 45px;
   height: 45px;
-  background-color: var(--main-purple);
+  background-color: var(--main-dark-purple);
   border-radius: 50%;
   margin: auto;
+}
+
+#userIconCircle i,
+.userIconCircle i {
+  color: white;
+  font-size: 1.3em;
 }
 
 #backArrow {
@@ -75,27 +103,30 @@ body {
 }
 
 #appName h1 {
-  text-align: center;
-  font-family: 'Lato';
-  font-weight: lighter;
-  font-size: 2em;
-  color: #707070;
+  /* text-align: center; */
+  font-family: "Pacifico", cursive;
+  font-size: 1.8em;
+  color: #464646;
+  margin-left: 10px;
 }
 
 #filterButton {
   /* background-color: blue; */
+  -ms-grid-column: 4;
   grid-column-start: 4;
 }
 
 #postButton {
   /* background-color: yellow; */
+  -ms-grid-column: 5;
   grid-column-start: 5;
 }
 
 #filterButton i,
-#postButton i {
+#postButton i,
+#backArrow {
   font-size: 1.5em;
-  color: #808080;
+  color: #464646;
 }
 
 #resourceForumBar {
@@ -105,12 +136,15 @@ body {
 }
 
 #rfBarGrid {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 1fr;
   grid-template-columns: 1fr 1fr;
   height: 20%;
 }
 
 .rfBarForum {
+  -ms-grid-columns: 1fr !important;
   grid-template-columns: 1fr !important;
 }
 #resourcesButton {
@@ -119,33 +153,112 @@ body {
 }
 
 #forumButton {
-  color: #808080
+  color: #5a5a5a;
 }
 
 #resourcesButton h1,
 #forumButton h1,
 #forumNameContainer h1 {
   text-align: center;
-  font-family: 'Lato';
+  font-family: "Lato";
   font-weight: lighter;
-  font-size: 1.5em;
+  font-size: 1.25em;
 }
 
 #bottomBar {
   /* background-color: orange; */
   width: 100%;
   height: 100%;
-  border-top: 1px solid #C0C0C0;
+  /* border-top: 1px solid #C0C0C0; */
+  box-shadow: 0 -1px 3px rgb(231, 231, 231);
+  z-index: 100;
   /* position: absolute;
   bottom: 0; */
 }
 
 #bottomBarGrid {
+  display: -ms-grid;
   display: grid;
   width: 95%;
   margin: auto;
+  -ms-grid-columns: 1fr 1fr 1fr;
   grid-template-columns: 1fr 1fr 1fr;
   height: 100%;
+}
+
+#replyButtonContainer {
+  display: none;
+}
+.replyButtonContainerShow {
+  display: -ms-grid !important;
+  display: grid !important;
+  height: 100%;
+  width: 100%;
+  -ms-grid-columns: 90% 10%;
+  /* grid-template-columns: 90% 10%; */
+}
+
+.addCommentContainer {
+  border: 1px solid #a0a0a0;
+  /* height: 60%; */
+  width: 90%;
+  /* margin: auto; */
+  /* border-radius: 3px; */
+}
+
+.addCommentContainer h1 {
+  margin-left: 5px;
+  font-family: "Lato";
+  font-size: ;
+  font-weight: bolder;
+  color: #909090;
+  letter-spacing: 1.2px;
+}
+
+.postContainer {
+  height: 60%;
+  margin: auto;
+  color: #808080;
+}
+
+#sendContainerHome {
+  display: grid;
+  grid-template-columns: 2fr 0.3fr;
+}
+
+#msgInputHome {
+  height: 100%;
+  width: 100%;
+  padding-left: 0.9em;
+  box-sizing: border-box;
+  border: none;
+  /* border-right: 1px solid var(--main-purple) !important; */
+  border-radius: 0px;
+  font-size: 1em;
+}
+
+#msgInputHome:focus {
+  outline-offset: 0px !important;
+  outline: none !important;
+}
+
+#msgInputHome:placeholder-shown {
+  padding-left: 1em;
+}
+
+#sendButtonHome {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+}
+
+#sendButtonHome i {
+  font-size: 1.5em;
+  line-height: calc(100vh * (0.5 / 6.75));
+}
+
+#sendButtonHome i:hover {
+  color: var(--main-purple);
 }
 
 #homeButton {
@@ -157,59 +270,66 @@ body {
 #alertsButton {
 }
 
-#homeButton i {
-  color: var(--main-purple)
-}
+/* #homeButton i {
+  color: var(--main-purple);
+} */
 
 #homeButton i,
 #searchButton i,
 #alertsButton i {
-  font-size: 2em;
+  font-size: 1.5em;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
   transition: 0.3s;
 }
 
 #homeButton i:hover,
 #searchButton i:hover,
 #alertsButton i:hover {
-  color: var(--main-purple)
+  color: var(--main-purple);
 }
 
 #mainContent {
   overflow-y: scroll;
-  background-color: #C0C0C0;
+  /* background-color: #D0D0D0; */
+  background-color: white !important;
 }
 
 #feedContainer,
 #forumContainer,
 #individualFeedItem,
 .formContainer {
-  width: 98%;
   height: 100%;
   margin: auto;
-  margin-top: 0.5em;
+  /* margin-top: 0.5em; */
   display: block;
 }
 
 .feedItem {
   background-color: white;
   width: 100%;
-  border-bottom: 1px solid #D0D0D0;
+  /* border-bottom: 1px solid #d0d0d0; */
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 2fr 9%;
   grid-template-columns: 1fr 2fr 9%;
-  grid-template-rows: 20% 20% 20% 40%;
-  grid-column-gap: 5px;
+  -ms-grid-rows: 1fr 1fr 2fr;
+  grid-template-rows: 1fr 1fr 2fr;
+  /* margin-top: 10px; */
 }
 
 .itemIcon {
   margin: auto;
-  width: 85%;
-  height: 85%;
+  margin-top: 10px;
+  width: 80%;
+  height: 70%;
+  -ms-grid-column: 1;
   grid-column-start: 1;
+  -ms-grid-row-span: 2;
   grid-row-end: span 2;
   background-position: center;
   background-size: cover;
 }
-
 
 .feedItem:last-child,
 .subForum:last-child,
@@ -224,7 +344,9 @@ body {
   /* display: grid; */
   /* grid-template-columns: 1fr 3fr; */
   /* grid-row-gap: 32px; */
+  -ms-grid-row: 1;
   grid-row-start: 1;
+  -ms-grid-column-span: 2;
   grid-column-end: span 2;
 }
 
@@ -233,11 +355,14 @@ body {
 }
 
 .itemTitle {
+  -ms-grid-column: 2;
   grid-column-start: 2;
 }
 
 .itemMessage {
+  -ms-grid-row: 1;
   grid-row-start: 1;
+  -ms-grid-column: 3;
   grid-column-start: 3;
   margin: auto;
   color: var(--main-purple);
@@ -245,15 +370,15 @@ body {
 }
 
 .itemType h2 {
-  font-family: 'Roboto';
-  font-weight: lighter;
+  font-family: "Roboto";
+  font-weight: normal;
   letter-spacing: 1px;
   color: #505050;
 }
 
 .itemTitle h2 {
-  font-family: 'Roboto';
-  font-weight: lighter;
+  font-family: "Roboto";
+  font-weight: 390;
   font-size: 1.1em;
   color: #808080;
   letter-spacing: 1px;
@@ -262,7 +387,7 @@ body {
 
 .itemDate h4,
 .itemUser h4 {
-  font-family: 'Lato';
+  font-family: "Lato";
   font-weight: bolder;
   font-size: 0.7em;
   opacity: 0.5;
@@ -276,7 +401,9 @@ body {
 .feedDescription {
   /* background-color: red; */
   /* display: none; */
+  -ms-grid-column: 1;
   grid-column-start: 1;
+  -ms-grid-column-span: 3;
   grid-column-end: span 3;
   /* text-align: center; */
   margin: auto;
@@ -289,31 +416,85 @@ body {
 }
 
 .feedDescription h4 {
-  font-family: 'Roboto';
-  font-weight: lighter;
-  font-size: 0.8em;
+  font-family: "Roboto";
+  font-weight: 300;
+  line-height: 150%;
+  font-size: 0.9em;
 }
 
 .shortDesc {
-  background-image: linear-gradient(180deg,#303030 40%,rgba(0,0,0,0));
--webkit-background-clip: text;
--webkit-text-fill-color: transparent;
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    color-stop(40%, #303030),
+    to(rgba(0, 0, 0, 0))
+  );
+  background-image: -webkit-linear-gradient(top, #303030 40%, rgba(0, 0, 0, 0));
+  background-image: -o-linear-gradient(top, #303030 40%, rgba(0, 0, 0, 0));
+  background-image: linear-gradient(180deg, #303030 40%, rgba(0, 0, 0, 0));
+  -webkit-background-clip: text;
+  display: none;
+  -webkit-text-fill-color: transparent;
+}
+
+.shortReplies {
+  display: none;
+}
+
+.longReplies {
+  display: -ms-grid;
+  display: grid;
+  grid-gap: 10px;
 }
 
 .longDesc {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+}
+
+#individualFeedItem {
 }
 
 .repliesText {
-  background-color: white;
+  background-color: var(--main-purple);
   padding: 10px;
-  font-family: 'Lato';
+  font-family: "Lato";
   font-weight: bolder;
-  color: #808080;
+  color: white;
+  border-bottom: 1px solid #d0d0d0;
   letter-spacing: 1.4px;
+  padding-left: 5%;
+}
+
+.feedItemRepliesContainer {
+  /* background-color: white; */
+  padding: 0 2.5%;
+}
+
+.feedItemReplies {
+  /* width: 95%; */
+  margin: auto;
+}
+
+.feedItemReplies h5 {
+  width: 95%;
+  margin-left: 10px;
+  font-family: "Lato";
+  color: #707070;
+  font-size: 0.7em;
+  letter-spacing: 1.3px;
+}
+
+.feedItemReplies h4 {
+  font-family: "Roboto";
+  font-size: 0.9em;
+  font-weight: 500;
+  width: 95%;
+  margin-left: 10px;
 }
 
 #forumGrid {
+  display: -ms-grid;
   display: grid;
   height: 100%;
   grid-gap: 1px;
@@ -323,10 +504,12 @@ body {
   width: 100%;
   height: 100%;
   background-color: white;
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 0.2fr 1fr 4fr;
   grid-template-columns: 0.2fr 1fr 4fr;
   grid-gap: 10px;
-  border-bottom: 1px solid #D0D0D0;
+  border-bottom: 1px solid #d0d0d0;
 }
 
 .borderLeft {
@@ -341,29 +524,28 @@ body {
 
 .subForum:nth-child(3) .borderLeft,
 .subForum:nth-child(3) .subForumIcon i {
-  background-color: var(--science-green)
+  background-color: var(--science-green);
 }
 
 .subForum:nth-child(4) .borderLeft,
 .subForum:nth-child(4) .subForumIcon i {
-  background-color: var(--english-blue)
+  background-color: var(--english-blue);
 }
 
 .subForum:nth-child(5) .borderLeft,
 .subForum:nth-child(5) .subForumIcon i {
-  background-color: var(--history-yellow)
+  background-color: var(--history-yellow);
 }
 
 .subForum:nth-child(6) .borderLeft,
 .subForum:nth-child(6) .subForumIcon i {
-  background-color: var(--foreign-orange)
+  background-color: var(--foreign-orange);
 }
 
 .subForum:nth-child(7) .borderLeft,
 .subForum:nth-child(7) .subForumIcon i {
-  background-color: var(--main-purple)
+  background-color: var(--main-purple);
 }
-
 
 .subForumIcon {
 }
@@ -378,34 +560,34 @@ body {
 
 .subForumInfo h1,
 .subForumInfo h2 {
-  font-family: 'Roboto';
-  font-weight: lighter;
+  font-family: "Roboto";
+  font-weight: normal;
 }
 
 .subForumInfo h1 {
-  font-size: 1.3em;
+  font-size: 1.1em;
   margin-bottom: 10px;
 }
 
 .subForumInfo h2 {
-  font-size: 1em;
+  font-size: 0.9em;
   margin-top: 10px;
-  opacity: 0.8;
+  opacity: 0.9;
 }
 
 .subForumGrid {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-rows: 1fr;
   grid-template-rows: 1fr;
   grid-gap: 10px;
 }
 
 .subPost {
   background-color: white;
-  border-top: 1px solid #A0A0A0;
-  border-bottom: 1px solid #A0A0A0;
+  /* border-top: 1px solid #D0D0D0; */
+  border-bottom: 1px solid #d0d0d0;
 }
-
-
 
 .subPostTopBar {
   width: 80%;
@@ -413,17 +595,19 @@ body {
 }
 
 .subPostInfo {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 9fr 1fr;
   grid-template-columns: 9fr 1fr;
-  font-family: 'Lato';
+  font-family: "Lato";
   color: #707070;
   font-size: 0.7em;
   letter-spacing: 1.3px;
 }
 
-#subPostTitleContainer h1{
-  font-family: 'Roboto';
-  font-size: 1.2em;
+#subPostTitleContainer h1 {
+  font-family: "Roboto";
+  font-size: 1.05em;
   font-weight: normal;
   width: 80%;
   margin: auto;
@@ -435,7 +619,7 @@ body {
   width: 80%;
   margin: auto;
   color: #707070;
-  font-family: 'Lato';
+  font-family: "Lato";
   font-size: 0.8em;
   letter-spacing: 1.3px;
 }
@@ -443,6 +627,7 @@ body {
 #postFeedContainer {
   height: 100%;
   display: none;
+  -ms-grid-rows: 0.5fr 5fr;
   grid-template-rows: 0.5fr 5fr;
 }
 
@@ -453,20 +638,29 @@ body {
 }
 
 .topBarGrid {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 15% 40% 27% 9% 9%;
   grid-template-columns: 15% 40% 27% 9% 9%;
-  border-bottom: 1px solid #D0D0D0;
+  border-bottom: 1px solid #d0d0d0;
 }
 
 .userIcon,
 .closeButton {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
   justify-content: center;
   /* vertically centering elements */
 }
 
 .closeButton {
+  -ms-grid-column: 5;
   grid-column-start: 5;
 }
 
@@ -496,7 +690,7 @@ body {
 }
 
 .postFeedTitle h1 {
-  font-family: 'Lato';
+  font-family: "Lato";
   font-weight: lighter;
   font-size: 2em;
   color: #707070;
@@ -508,24 +702,26 @@ body {
 
 .formContainer {
   width: 80%;
-
 }
 
 .formGrid {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-rows: 1fr;
   grid-template-rows: 1fr;
   grid-gap: 2em;
 }
 
 label {
-  font-family: 'Roboto';
-  font-weight: 200;
+  font-family: "Roboto";
+  font-weight: normal;
+  color: white;
 }
 
 label h1 {
   font-size: 1em;
   letter-spacing: 2px;
-  font-family: 'Lato';
+  font-family: "Lato";
   font-weight: bolder;
   color: white;
   text-align: center;
@@ -533,7 +729,9 @@ label h1 {
 }
 
 #radioGridContainer {
+  display: -ms-grid;
   display: grid;
+  -ms-grid-columns: 1fr 1fr;
   grid-template-columns: 1fr 1fr;
   grid-gap: 10px;
 }
@@ -559,41 +757,40 @@ label h1 {
 /* Hide the browser's default radio button */
 
 .radioContainer input {
-    position: absolute;
-    opacity: 0;
-    cursor: pointer;
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
 }
-
 
 /* Create a custom radio button */
 
 .checkmark {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background-color: rgba(255, 255, 255, 0);
-    color: transparent;
-    border-radius: 10px;
-    -webkit-transition: 0.3s;
-    -o-transition: 0.3s;
-    transition: 0.3s;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(255, 255, 255, 0);
+  color: transparent;
+  border-radius: 10px;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
 }
 
 input:checked ~ .checkmark {
 }
 
 .checkmark:after {
-    content: '';
-    padding: 10px;
-    position: absolute;
-    display: none;
+  content: "";
+  padding: 10px;
+  position: absolute;
+  display: none;
 }
 
 .checkmark p {
-    color: white;
-    font-size: 20px;
+  color: white;
+  font-size: 20px;
 }
 
 #formTitleInput,
@@ -613,12 +810,13 @@ input:checked ~ .checkmark {
 
 .formItemImage {
   height: 200px;
+  position: relative;
 }
 
 .formItemImageContainer {
   width: 100%;
   height: 100%;
-  background-color: #C0C0C0;
+  background-color: #c0c0c0;
   border-radius: 6px;
 }
 
@@ -638,7 +836,7 @@ input[type="submit"] {
   margin-top: 1em;
   margin-bottom: 1em;
   text-transform: uppercase;
-  font-family: 'Lato';
+  font-family: "Lato";
   font-size: 1em;
   letter-spacing: 2px;
 }
@@ -646,5 +844,19 @@ input[type="submit"] {
 #postForumContainer {
   height: 100%;
   display: none;
+  -ms-grid-rows: 0.5fr 5fr;
   grid-template-rows: 0.5fr 5fr;
+}
+
+#uploadImgBtn {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  opacity: 0;
+}
+
+#displayImg {
+  position: absolute;
+  max-height: 100%;
+  max-width: 100%;
 }
